--- a/_posts/2021-11-28-'Quotes-#28'.md
+++ b/_posts/2021-11-28-'Quotes-#28'.md
@@ -20,3 +20,7 @@ categories:
 tively within such a boundary determines the probability that they will. The reason that this relates to agency is that, ultimately, your awareness is what determines your beliefs and establishes the boundaries of what you perceive to be possible. This in turn directly impacts the daily decisions you make about what to do with yourself. If you read any biography of a prominent person, there will almost undoubtedly be a mention of an event or an instance that completely changed how they approached their lives. Sometimes, it’s a brush with mortality, but other times, it’s something as simple as realizing that maybe the rules they had always assumed to be facts weren’t actually set in stone. We all have these pivots of awareness that shift our perspective about what is real and what is important and what is worth doing. We can’t intellectualize them beforehand because they require first-hand exposure through experience. They expand agency by redefining possibility.
 - I am not what i think i am, i am not what you think i am, i am what i think you think i am
 - Pessimists sound smart. Optimists make money —natfriedman
+
+- “It’s so simple to spend less than you earn, and invest shrewdly, and avoid toxic people and toxic activities, and try and keep learning all your life, and do a lot of deferred gratification. If you do all those things, you are almost certain to succeed. If you don’t, you’re going to need a lot of luck.” 
+- “You should write your obituary and then try to figure out how to live up to it,” Buffett said in response. “It’s not that complicated.”
+- “The great lesson of life is get them the hell out of your life—and do it fast,” Munger said of people who are a bad influence. But that’s not all: He advises people to also be prudent with money and always be open to learning throughout their lives.
